--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@ footer .socials a ion-icon{
         <main>
             <h1><span>Salim's</span> Summarizer App</h1>
             <h2>Hey, Amigo!</h2>
-            <p>Enter the review that you want to summarize, and click Summarize!</p>
+            <p>Enter the long text that you want to summarize, and click Summarize!</p>
             <form method="POST">
                 <div class="form__row text">
                     <label for="text">Text</label>
