--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
-    <meta name="description" content="A web app that reveals sentiment for reviews. Fully powered by Microsoft Azure">
+    <meta name="description" content="A web app that condenses long texts to main points. Fully powered by Microsoft Azure">
     <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1476966230775013380/xPMaGY5H_400x400.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
