--- a/templates/results.html
+++ b/templates/results.html
@@ -183,9 +183,9 @@ footer .socials a ion-icon{
     <div class="container result">
         <span id="themeSwitcher"><ion-icon name="sunny-outline"></ion-icon></span>
         <main>
-            <h1><span>Salim's</span> Translation App</h1>
+            <h1><span>Salim's</span> Summarizer App</h1>
             <h2>Hey, Amigo!</h2>
-            <p>Here's your translated text</p>
+            <p>Here's your original text</p>
             <div class="action">
                 <div class="action__row text">
                     <label for="text">Original Text</label>
