--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,12 @@
     color: hsl(233, 72%, 17%);
     background: #FFF;
 }
+/* a dark theme style that revert back to the background color  */
+.dark{
+    color: #FFF;
+    background: hsl(233, 47%, 7%);
+}
+
 *{
     box-sizing: border-box;
 }
@@ -183,6 +189,7 @@ footer .socials a ion-icon{
 <body id="body">
     <div class="container">
         <span id="themeSwitcher"><ion-icon name="sunny-outline"></ion-icon></span>
+        <!-- <span><button id="button"> Dark mode</button></span> -->
         <main>
             <h1><span>Salim's</span> Summarizer App</h1>
             <h2>Hey, Amigo!</h2>
@@ -206,14 +213,20 @@ footer .socials a ion-icon{
     <script>
         const themeSwitcher = document.getElementById("themeSwitcher")
         const body = document.getElementById("body")
+
         themeSwitcher.addEventListener("click", (e) => {
-            console.log("kjk");
-            if(e.target.name = "sunny-outline"){
+            console.log("testing2");
+            if(e.target.name === "sunny-outline"){
+                console.log("change to moon")
                 e.target.name = "moon"
                 body.classList.add("light")
-            }else if(e.target.name = "moon"){
-                body.classList.remove("light")
+                body.classList.remove("dark")
+                // document.getElementById("tryAgain").style.color = "hsl(277, 64%, 61%)"
+            } else {
+                console.log("change to sun-light")
                 e.target.name = "sunny-outline"
+                body.classList.add("dark")
+                body.classList.remove("light")
             }
         })
     </script>
